--- a/source/_posts/二叉树的先序、中序、后序遍历.md
+++ b/source/_posts/二叉树的先序、中序、后序遍历.md
@@ -7,6 +7,7 @@ categories: 数据结构与算法
 ### 先序遍历示意图：  
 ![image](http://osrmzp0jr.bkt.clouddn.com/%E5%85%88%E5%BA%8F%E9%81%8D%E5%8E%86.jpg)  
 
+<!-- more -->
 ### 中序遍历示意图：  
 ![image](http://osrmzp0jr.bkt.clouddn.com/%E4%B8%AD%E5%BA%8F%E9%81%8D%E5%8E%86.jpg)  
 
