--- a/source/_posts/如何保证线程的顺序执行？.md
+++ b/source/_posts/如何保证线程的顺序执行？.md
@@ -5,6 +5,7 @@ tags: [java,java并发]
 categories: java  
 ---
 &nbsp;&nbsp;有T1，T2，T3三个线程，如何保证T1执行完再执行T2，T2执行完再执行T3？这个问题是面试的常考问题，涉及到了一些java并发知识的实际应用。主要有下面三种方法，依次讲解下：  
+<!-- more -->
 ## 1、使用join关键字实现  
 join关键字用于让当前线程等待join线程执行完毕后再执行，否则会处于等待阻塞状态。有两种方法：  
 方法一：  
