--- a/source/_posts/常用排序算法总结.md
+++ b/source/_posts/常用排序算法总结.md
@@ -6,6 +6,7 @@ categories: 数据结构与算法
 ---
 ### 各比较排序性能比较
 ![image](http://osrmzp0jr.bkt.clouddn.com/%E6%AF%94%E8%BE%83%E6%8E%92%E5%BA%8F%E6%80%A7%E8%83%BD.jpg)  
+<!-- more -->
 ### 1、冒泡排序
 1、比较相邻的元素，如果前一个比后一个大，就把他们两个调换位置。  
 2、对每一对相邻的元素作同样的工作，从开始一对到最后一对，完成后，最后的元素会是最大的数。  
