--- a/source/_posts/静态代码块、构造代码块、构造函数及类初始化顺序.md
+++ b/source/_posts/静态代码块、构造代码块、构造函数及类初始化顺序.md
@@ -8,7 +8,7 @@ categories: java基础
 静态代码块：用static声明，jvm加载类时执行，仅执行一次。  
 构造代码块：类中直接用{}定义，每一次创建对象时执行。  
 执行顺序优先级：**静态块->main()->构造块->构造函数**。  
-
+<!-- more -->
 ## 二、详解
 ### 1、构造函数
 ```
