--- a/source/_posts/单例模式.md
+++ b/source/_posts/单例模式.md
@@ -11,6 +11,7 @@ categories: 设计模式
 保证整个应用中某个实例有且只有一个。  
 ## 应用场合
 有些对象我们只需要一个，比如**配置文件、工具类、线程池、缓存、日志对象**等。如果创造出多个实例，就会导致许多问题，比如占用过多资源，不一致的结果等。  
+<!-- more -->
 ## 一、饿汉模式
 第一步：将构造方法私有化，不允许外部直接创建对象  
 第二步：创建类的唯一实例，使用private static修饰，private保证不让外部类直接访问，static保证在第一次加载类的时候就创建了类的唯一实例。  
