--- a/source/_posts/字符串、基本数据类型等在堆、栈、常量池中的存储.md
+++ b/source/_posts/字符串、基本数据类型等在堆、栈、常量池中的存储.md
@@ -6,14 +6,16 @@ categories: java基础
 ---
 # 一、对于字符串
 字符串的对象引用都是存储在栈中的。如果是编译期已经创建好的（直接用双引号定义的），对象存储在常量池中；如果是运行期才能确定的（new出来的），对象存储在堆中。对于equals相等的字符串，常量池中只有一份，堆中可以有多份。  
-```
+
+<pre>
 String s1="china";
 String s2="china";
 String ss1=new String("china");
 String ss2=new String("china");
-```
-通过new产生一个字符串“china”时，会先去常量池中查找是否已经有了“china”，如果没有，就在常量池中创建一个此字符串对象，然后在堆中再创建一个常量池中此“china”对象的拷贝对象。  
+</pre>  
 
+通过new产生一个字符串“china”时，会先去常量池中查找是否已经有了“china”，如果没有，就在常量池中创建一个此字符串对象，然后在堆中再创建一个常量池中此“china”对象的拷贝对象。  
+<!-- more -->
 # 二、对于基础类型的变量和常量
 局部变量（包括形式参数）：数据存在于栈内存中，栈内存中的局部变量随着方法的消失而消失。  
 成员变量：存储在堆中的对象里面，由垃圾收集器负责回收。  
