--- a/source/_posts/工厂方法模式.md
+++ b/source/_posts/工厂方法模式.md
@@ -7,8 +7,9 @@ categories: 设计模式
 # 一、普通工厂模式
 就是建立一个工厂类，对实现了同一接口的一些类进行实例的创建。关系图如下：  
 ![image](http://osrmzp0jr.bkt.clouddn.com/factory1.png)  
+<!-- more -->
 举例如下：发送邮件和发送短信的例子
-```
+<pre>
 //两者的共同接口
 public interface Sender{
     public void Send();
@@ -51,18 +52,16 @@ public class FactoryTest{
         sender.Send();
     }
 }
-```
+</pre>
 # 二、多个工厂方法模式
 是对普通工厂方法模式的改进，在普通方法的模式中，如果传递的字符串出错，就不能正确的创建对象。而多个工厂方法模式，提供多个工厂方法，分别创建对象。  
 ![image](http://osrmzp0jr.bkt.clouddn.com/factory2.png)  
-```
+<pre>
 //只需工厂方法进行修改
 public class SendFactory{
-    
     public Sender produceMail(){
         return new MailSender();
     }
-    
     public Sender produceSms(){
         return new SmsSender();
     }
@@ -76,15 +75,14 @@ public class FactoryTest{
         sender.Send();
     }
 }
-```
+</pre>
 # 三、静态工厂方法模式
 将上面多个工厂方法的模式里的方法设置为静态的，不需要创建实例，直接调用即可。  
-```
+<pre>
 public class SendFactory{
     public static Sender produceMail(){
         return new MailSender();
     }
-    
     public static Sender produceSms(){
         return new SmsSender();
     }
@@ -97,7 +95,7 @@ public class FactoryTest{
         sender.Send();
     }
 }
-```
+</pre>
 # 使用场景
 如果出现了大量的产品需要创建，并且有共同的接口时，可以通过工厂方法模式来进行创建。第一种如果传入的字符串有错误，不能正确创建对象；第三种相较于第二种，不需要实例化工厂类。大多数情况下，静态工厂方法模式使用较多。
 
