--- a/source/_posts/抽象工厂模式.md
+++ b/source/_posts/抽象工厂模式.md
@@ -6,14 +6,15 @@ categories: 设计模式
 ---
 &nbsp;&nbsp;前面讲的工厂方法模式，存在一个问题：类的创建依赖于工厂类，也就是说，如果需要扩展程序，必须对工厂类进行修改。这时候我们使用抽象工厂类，就可以解决这个问题。创建多个工厂类，这样一旦需要增加新的功能，直接增加新的工厂类就可以了。  
 ![image](http://osrmzp0jr.bkt.clouddn.com/factory3.png)  
+<!-- more -->
 Sender接口：
-```
+<pre>
 public interface Sender{
     public void Send();
 }
-```
+</pre>
 两个实现类：  
-```
+<pre>
 public class MailSender implements Sender{
     @Override
     public void Send(){
@@ -27,9 +28,9 @@ public class SmsSender implements Sender{
         System.out.println("this is smsSender!");
     }
 }
-```
+</pre>
 两个工厂类：  
-```
+<pre>
 public class SendMailFactory implements Provider{
     @Override
     public Sender produce(){
@@ -43,13 +44,13 @@ public class SendSmsFactory implements Provider{
         return new SmsSender();
     }
 }
-```
+</pre>
 提供一个接口：  
-```
+<pre>
 public interface Provider{
     public Sender produce();
 }
-```
+</pre>
 测试类：  
 ```
 class Test{
