--- a/source/_posts/分布式系统互斥性与幂等性问题的分析和解决.md
+++ b/source/_posts/分布式系统互斥性与幂等性问题的分析和解决.md
@@ -6,14 +6,17 @@ categories: 分布式系统
 ---
 ## 前言
 分布式系统由独立的服务器通过网络松散耦合组成。在这个系统中，每个服务器都是一个独立的主机，服务器之间通过内部网络连接。分布式系统有以下几个特点：  
+
 - 可扩展性：可通过横向水平扩展来提高系统的性能和吞吐量。  
 - 高可靠性：高容错，即使系统中一台或几台故障，系统通过失效转移仍然可以提供服务。  
 - 高并发性：各机器并行独立处理和计算。  
 - 廉价高效：多台小型机而非单台高性能机。  
 
 在分布式系统中，环境复杂、网络不稳定性会造成诸如时钟不一致的问题，存在于集中式系统中机器宕机、消息丢失等问题也会在分布式环境中变得更加复杂。有两个问题是分布式环境中需要重点关注和解决的典型问题：  
+
 - 互斥性问题
-- 幂等性问题
+- 幂等性问题  
+
 <!-- more -->
 ## 一、互斥性问题
 看个例子：  
@@ -32,6 +35,7 @@ categories: 分布式系统
 在多道程序系统中存在许多进程，它们共享各种资源，然而有很多资源一次只能供一个进程使用，这便是临界资源。多进程中的临界资源大致可以分为两类，一类是物理上的真实资源，如打印机；一类是硬盘或内存中的共享数据，如共享内存等。进程内互斥访问临界资源的代码称为**临界区**。  
 对于临界资源的互斥访问，JVM层面的锁已经失去作用了。在多进程情况下，主要还是利用操作系统层面的进程间通信原理来解决临界资源的抢占问题。比较常见的一种方法是使用信号量（Semaphores）  
 信号量分为有名信号量和无名信号量。无名信号量通常保存在共享内存中，而有名信号量是于一个特定的文件夹名称相关联。对信号量的操作主要是P操作（wait）和V操作（signal）。  
+
 - P操作：先检查信号量的大小，若值大于零，则将信号量减1，同时进程获得共享资源的访问权限，继续执行；若小于或者等于零，则该进程被阻塞后，进入等待队列。  
 - V操作：该操作将信号量的值加1，如果有进程阻塞着等待该信号量，那么其中一个进程被唤醒。  
 
@@ -54,6 +58,7 @@ mysql.update(lock.status = 0);  //释放锁，更新锁状态
 ```
 #### 问题
 上面简单的实现了一个分布式锁，但是存在一些问题：  
+
 - 问题1：锁状态判断的原子性无法保证   
 从读取锁的状态，到判断该状态是否为被锁，这两个操作如果不能保证是原子性的，就可能导致不止一个请求获取到了锁，这显然是不行的。  
 - 问题2：网络断开或主机宕机，锁状态无法清除
@@ -109,11 +114,16 @@ Redis的分布式缓存特性使其成为了分布式锁的一种基础实现。
 ## 二、幂等性问题
 幂等，就是对接口的多次调用所产生的结果和调用一次是一致的。这里的接口，可以是对外发布的HTTP接口或者Thrift接口，也可以是接收消息的内部接口，或者是一个内部方法或操作。  
 比如以下例子：  
+
 - 在App下单的时候，点击确认之后没反应，就又点击几次。在这种情况下，如果无法保证该接口的幂等性，那么将会出现重复下单问题。  
 
 在分布式环境中，网络环境更加复杂，因前端操作抖动、网络故障、消息重复、响应速度慢等原因，对接口重复调用概率会比集中式环境下更大，尤其是重复消息在分布式环境中很难避免。  
 
-分布式环境中，有些接口是天然保证幂等性的，如查询操作。有些对数据的修改是一个常量，并且无其他记录和操作，那么夜可以说是具有幂等性的。其他情况下，会涉及对数据的修改、状态的变更就有必要防止重复性操作的发生，我们需要通过实现接口的幂等性来防止重复操作所带来的影响。 
+### 实现方式
+- 业务操作本身就具有幂等性。
+- 系统缓存所有请求与处理结果，检测到重复请求之后，自动返回之前的处理结果。
+
+分布式环境中，有些接口是天然保证幂等性的，如查询操作。有些对数据的修改是一个常量，并且无其他记录和操作，那么也可以说是具有幂等性的。其他情况下，会涉及对数据的修改、状态的变更就有必要防止重复性操作的发生，我们需要通过实现接口的幂等性来防止重复操作所带来的影响。 
 
 ### GTIS
 是分布式环境下幂等性的一个解决方案，能确保在分布式环境下操作的唯一性。  
