--- a/source/_posts/负载均衡那些事.md
+++ b/source/_posts/负载均衡那些事.md
@@ -3,6 +3,7 @@ title: 负载均衡那些事
 date: 2018-06-25 16:55:00  
 tags: [大型网站技术架构,分布式]    
 categories: 分布式系统
+toc: true
 ---
 在网站的架构设计中，应用服务器应该被设计成无状态的，也就是说应用服务器不存储请求上下文信息。这样子的话，如果将部署相同应用的服务器组成一个集群，每次用户请求都可以发送到集群中任何一台服务器上进行请求处理，任何一台服务器的处理结果都是相同的。通过使用这种方式，让网站的可用性、伸缩性更好，能够处理更大的流量，这种方式称为"负载均衡"。在这篇文章中，我们一起来学习负载均衡，主要分下面三个部分来将，会依次介绍常用的负载均衡技术，常用的负载均衡算法以及这些负载均衡层在实际案例中的使用方式。  
 <!-- more -->
